styles.css
:root {
    /* color palette */
    --white: #FFFFFF;
    --black: #2A2B2E;
    --primary: #5C23DC;
    --secondary: #A997DF;
    --accent: #FF3366;

    /* fonts */
    --mainFont: 'Wix Madefor Text', sans-serif;
    --logoFont: 'Poppins', sans-serif;

    /* dimensions */
}

* {
    margin: 0.125rem;
}

/* remove this later */
#right div {
    border: 1px solid black;
}

body {
    background-color: hsl(0 0% 80% / .3);
    display: flex;
    align-items: center;
    justify-content: center;
}

#container {
    display: flex;
    flex: 1;
    position: relative;
    top: 2rem;
    border-radius: 1rem;
    box-shadow: 10px 10px 20px var(--secondary);
    background-color: var(--white);
    height: 90vh;
    max-width: 100rem;
    min-width: 50rem;
    min-height: 35rem;
}

#left,
#right {
    flex: 1;
    padding: 1rem;
    border-radius: 0.8rem;
}

#left {
    background-color: var(--primary);
    color: var(--white);
    margin: 0.8rem;
}

#right {
    background-color: var(--white);
    font-family: var(--mainFont);
    color: var(--black);
}

img {
    max-height: 35rem;
    flex: 0;
}

.graphic {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.join,
.graphic {
    font-family: var(--mainFont);
    position: relative;
    bottom: -3rem;
}

.join p {
    padding: 1rem 0.5rem 0.3rem 1.5rem;
}

.logo {
    font-family: var(--logoFont);
    font-size: 1.5rem;
    letter-spacing: 0.4rem;
    padding: 1.2rem 0 0 1.5rem;
}

.join p:first-child {
    font-size: 3rem;
    font-weight: bold;
}

.join p:nth-child(2) {
    font-size: 2rem;
    padding-top: 2rem;
}

.attribution {
    position: relative;
    bottom: 2.5rem;
    text-align: center;
    letter-spacing: 0.1rem;
}

.attribution a:visited {
    color: var(--white);
}

#right-container {
    position: relative;
    top: 10rem;
}

.cta,
form {
    padding: 1rem;
}

.cta h3 {
    font-size: 2.8rem;
    font-weight: 600;
}

.cta p:nth-child(2) {
    font-size: 1.3rem;
    padding-top: 1.2rem;
    margin-left: 0.5rem;
}

.cta a:visited,
.cta a:active {
    color: var(--accent);
}

label {
    padding: 0.5rem;
}

section {
    padding: 0.5rem;
}

